@@ -105,6 +105,9 @@ Version 2.25
 * The functions strfromd, strfromf, and strfroml, from ISO/IEC TS 18661-1:2014,
   are added to libc.  They convert a floating-point number into string.
 
+* The function strfromf128, from ISO/IEC TS 18661-3:2014, is added to libc.  It
+  converts a _Float128 value into string.
+
 * Most of glibc can now be built with the stack smashing protector enabled.
   It is recommended to build glibc with --enable-stack-protector=strong.
   Implemented by Nick Alcock (Oracle).
